--- a/app/src/main/res/layout/activity_customer_support_page.xml
+++ b/app/src/main/res/layout/activity_customer_support_page.xml
@@ -29,11 +29,12 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="24dp"
         android:background="@drawable/left_arrow"
-        android:onClick="settingsPage"
         android:foreground="@drawable/ripple"
+        android:onClick="settingsPage"
         app:itemRippleColor="#C1C1C1"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
 
     <TextView
         android:id="@+id/topMessage2"
