--- a/app/src/main/res/layout-v23/activity_rewards.xml
+++ b/app/src/main/res/layout-v23/activity_rewards.xml
@@ -126,7 +126,7 @@
                 app:layout_constraintStart_toStartOf="@+id/circle_coffee"
                 app:layout_constraintTop_toTopOf="@+id/circle_coffee"
                 app:srcCompat="@drawable/coffee_cup"
-                android:contentDescription="@string/todo" />
+                android:contentDescription="TODO" />
 
             <TextView
                 android:id="@+id/coffee_image"
@@ -163,18 +163,18 @@
                 android:letterSpacing="0.25"
                 android:onClick="details_button_popup"
                 android:paddingStart="0dp"
+                android:paddingLeft="0dp"
                 android:paddingTop="0dp"
                 android:paddingEnd="0dp"
                 android:paddingBottom="0dp"
-                android:text="@string/click_for_surprise"
+                android:text="Click For Surprise"
                 android:textColor="#FFFFFF"
                 android:textStyle="bold"
                 app:backgroundTint="@color/red_ec"
                 app:layout_constraintBottom_toBottomOf="@+id/congratsBox"
                 app:layout_constraintEnd_toEndOf="@+id/congratsBox"
                 app:layout_constraintHorizontal_bias="0.498"
-                app:layout_constraintStart_toStartOf="@+id/congratsBox"
-                tools:targetApi="m" />
+                app:layout_constraintStart_toStartOf="@+id/congratsBox" />
 
             <TextView
                 android:id="@+id/suprisePopUp"
