--- a/app/src/main/res/layout/activity_app_settings_page.xml
+++ b/app/src/main/res/layout/activity_app_settings_page.xml
@@ -53,7 +53,8 @@
         android:onClick="settingsPage"
         app:itemRippleColor="#C1C1C1"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
 
     <TextView
         android:id="@+id/topMessage2"
@@ -249,17 +250,18 @@
         android:layout_height="40dp"
         android:background="@drawable/support_red_box"
         android:fontFamily="@font/sofia_regular"
+        android:foreground="@drawable/ripple_grayc1c1"
         android:paddingStart="30dp"
-        android:text="Help"
+        android:text="@string/help"
         android:textAlignment="textStart"
         android:textColor="#CCFFFFFF"
         android:textSize="15sp"
-        android:foreground="@drawable/ripple_grayc1c1"
         app:backgroundTint="@color/dark_red"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/help_policies_text" />
+        app:layout_constraintTop_toBottomOf="@+id/help_policies_text"
+        tools:ignore="TouchTargetSizeCheck" />
 
     <Button
         android:id="@+id/app_terms_text_box"
@@ -267,17 +269,18 @@
         android:layout_height="40dp"
         android:background="#CC800B0B"
         android:fontFamily="@font/sofia_regular"
+        android:foreground="@drawable/ripple_grayc1c1"
         android:paddingStart="30dp"
         android:text="Application Terms"
         android:textAlignment="textStart"
         android:textColor="#CCFFFFFF"
         android:textSize="15sp"
-        android:foreground="@drawable/ripple_grayc1c1"
         app:backgroundTint="@color/dark_red"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/help_text_box" />
+        app:layout_constraintTop_toBottomOf="@+id/help_text_box"
+        tools:ignore="TouchTargetSizeCheck" />
 
     <Button
         android:id="@+id/privacy_text_box"
@@ -285,17 +288,18 @@
         android:layout_height="40dp"
         android:background="#CC800B0B"
         android:fontFamily="@font/sofia_regular"
+        android:foreground="@drawable/ripple_grayc1c1"
         android:paddingStart="30dp"
-        android:text="Privacy Statement"
+        android:text="@string/privacy_statement"
         android:textAlignment="textStart"
         android:textColor="#CCFFFFFF"
         android:textSize="15sp"
-        android:foreground="@drawable/ripple_grayc1c1"
         app:backgroundTint="@color/dark_red"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/app_terms_text_box" />
+        app:layout_constraintTop_toBottomOf="@+id/app_terms_text_box"
+        tools:ignore="TouchTargetSizeCheck" />
 
 
     <Button
@@ -309,7 +313,6 @@
         android:letterSpacing="0.25"
         android:onClick="settingsPage"
         android:paddingStart="0dp"
-        android:paddingLeft="0dp"
         android:paddingTop="0dp"
         android:paddingEnd="0dp"
         android:paddingBottom="0dp"
@@ -319,7 +322,8 @@
         app:layout_constraintBottom_toBottomOf="@+id/whiteBox3"
         app:layout_constraintEnd_toEndOf="@+id/whiteBox3"
         app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintStart_toStartOf="@+id/whiteBox3" />
+        app:layout_constraintStart_toStartOf="@+id/whiteBox3"
+        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
 
     <Switch
         android:id="@+id/passcode_lock_switch"
@@ -329,7 +333,8 @@
         app:layout_constraintBottom_toBottomOf="@+id/passcode_text_box"
         app:layout_constraintEnd_toEndOf="@+id/passcode_text_box"
         app:layout_constraintTop_toTopOf="@+id/passcode_text_box"
-        app:layout_constraintVertical_bias="0.975" />
+        app:layout_constraintVertical_bias="0.975"
+        tools:ignore="TouchTargetSizeCheck" />
 
     <Switch
         android:id="@+id/biometrics_switch"
@@ -339,7 +344,8 @@
         android:onClick="biometric_scanner_switch"
         app:layout_constraintBottom_toBottomOf="@+id/biometric_text_box"
         app:layout_constraintEnd_toEndOf="@+id/biometric_text_box"
-        app:layout_constraintTop_toTopOf="@+id/biometric_text_box" />
+        app:layout_constraintTop_toTopOf="@+id/biometric_text_box"
+        tools:ignore="TouchTargetSizeCheck" />
 
     <Switch
         android:id="@+id/inbox_messages_switch"
@@ -349,7 +355,8 @@
         app:layout_constraintBottom_toBottomOf="@+id/inbox_messages_text_box"
         app:layout_constraintEnd_toEndOf="@+id/inbox_messages_text_box"
         app:layout_constraintTop_toTopOf="@+id/inbox_messages_text_box"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.0"
+        tools:ignore="TouchTargetSizeCheck" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
